--- a/Leaves_Tensorflow_ConvNets.ipynb
+++ b/Leaves_Tensorflow_ConvNets.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "As seen in my previous project (Github Repositoryfolium-genus)we had the limitation on test accuracy for the leaves classification problem using fully connected neural networks.This data being an image dataset, the next logical approach should be convolutional layers.  Hence, the purpose here is to build and train a convolutional neural network for classifying the leaves species. This model has been built using Google's open source numerical computation framework- Tensorflow.\n",
     "\n",
-    ![]alt text](https://github.com/shashanksharad/folium-genus-conv-nets/blob/master/NNArch.png)
+    "<img src=\"NNArch.png\" style=\"width:800px;height:300px;\">"
    ]
   },
   {
